Drag and drop works with multiple components. Issues: elements are hidden by workspace also need to work on spacing.

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -22,6 +22,7 @@ input {
   position: absolute;
   top: 35px;
   left: 10px;
+  z-index: -100;
   height: calc(100% - 45px);
   background-color: lightgrey;
 }
@@ -29,9 +30,11 @@ input {
 .components {
   position: absolute;
   top: 10px;
+  z-index: 100;
   height: calc(100% - 20px);
   background-color: lightgrey;
-    overflow-y: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .tab-spacer-horizontal {
